--- a/src/lib/app.css
+++ b/src/lib/app.css
@@ -4,7 +4,11 @@
 @theme {
   --color-base: #111;
   --color-text: #fff;
+  --color-text-dark: #222;
   --color-text-home: #eee;
   --color-searchbar: #333;
   --font-sans: 'Proxima Nova';
+  --color-ddg-blue30: #769DFF;
+  --color-ddg-blue40: #5784FF;
+  --color-ddg-blue50: #3969EF;
 }
