style: Prettier format

--- a/src/lib/app.css
+++ b/src/lib/app.css
@@ -8,7 +8,7 @@
   --color-text-home: #eee;
   --color-searchbar: #333;
   --font-sans: 'Proxima Nova';
-  --color-ddg-blue30: #769DFF;
-  --color-ddg-blue40: #5784FF;
-  --color-ddg-blue50: #3969EF;
+  --color-ddg-blue30: #769dff;
+  --color-ddg-blue40: #5784ff;
+  --color-ddg-blue50: #3969ef;
 }
